# pacman

./: .gitignore  CMakeLists.txt  README.md
.harness/: crogerspacman.yaml
headers/: CMakeLists.txt  GameManager.hpp
res/: ghost-template.aseprite  labyrinth-tilemap.aseprite
src/: CMakeLists.txt  DebugUtils.cpp  DebugUtils.hpp  GameManager.cpp  GameManager.hpp  Ghost.cpp  Ghost.hpp  Labyrinth.cpp  Labyrinth.hpp  Pacman.cpp  Pacman.hpp  main.cpp
src/entities/: Ghosts.cpp  Ghosts.cpp.orig  Ghosts.hpp  Ghosts.hpp.orig  Labyrinth.cpp  Labyrinth.cpp.orig  Labyrinth.hpp  Labyrinth.hpp.orig  Pacman.cpp  Pacman.hpp
src/game-manager/: GameManager.cpp  GameManager.hpp
src/helpers/: AnimatedSprite.hpp  AudioManager.hpp  CMakeLists.txt  CollisionDetection.hpp  Collisions.cpp  Collisions.hpp  Movement.hpp  TileCoordConversion.cpp  TileCoordConversion.hpp  TileCoords.cpp
src/state/: CMakeLists.txt
